[package]
name = "ddns-updater"
version = "0.1.0"
authors = ["Ben Lewis <1884340+ben-zen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
tokio = { version = "0.2", features = [ "rt-threaded" ] }