[package]
name = "ddns-updater"
version = "1.0.0"
authors = ["Ben Lewis <1884340+ben-zen@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
keywords = ["dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.9", features = [ "json" ] }
matches = { version = "0.1" }
pnet = { version = "0.26" }
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = { version = "1.0" }
structopt = { version = "0.3" }
tokio = { version = "0.2", features = [ "macros", "rt-threaded" ] }
toml = { version = "0.5" }